syntax = "proto3";

option go_package = "github.com/net-prophet/noir/pkg/proto";

package noir;

message NoirStatus {
    oneof status {
        WorkerStatus worker = 1;
        RoomStatus room = 2;
        PeerStatus peer = 3;
    }
}

message WorkerStatus {
    string id = 1;
    string lastUpdate = 2;
}

message RoomStatus {
    string id = 1;
    string lastUpdate = 2;
    string title = 3;
    string workerID = 4;
}

message PeerStatus {
    string id = 1;
    string lastUpdate = 2;
    string roomID = 3;
}
